current core components are add

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
         - ./django/:/code
       env_file:
         - ./django/project.env
+      ports:
+        - 8000:8000
       depends_on:
         - db
 #volumes:
