--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,15 @@
 version: "3"
     
 services:
-    db:
+    company_db:
       image: postgres
       container_name: postgresdb
       env_file:
         - ./django/project.env
-      ports:
-        - 5432:5432
       volumes:
         - ./postgres-data:/var/lib/postgresql/data
 
-    web:
+    company_web:
       build: ./django
       container_name: django
       volumes:
@@ -21,6 +19,6 @@ services:
       ports:
         - 8000:8000
       depends_on:
-        - db
+        - company_db
 #volumes:
 #  postgres-data:
